<resources>
    <string name="app_name">NextStop</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="map_description">This is the map implemented with the OSMDroid API</string>
    <string name="zoom_in_btn_description">Zoom-In</string>
    <string name="zoom_out_btn_description">Zoom-Out</string>
    <string name="my_location_btn_description">My current location</string>\
    <string name="settings_btn_description">Settings</string>
    <string name="compass_btn_description">Compass</string>
    <string name="filter_btn_description">Filter the Stations based on the Transport</string>
    <string name="route_1_description"><![CDATA[<i><b>Administrator</i></b> – S.R.L. „NIZOR-LUX”, lungime 13.7 km, activează de la ora 06:00 pînă la ora 21:00: <br><br><i><b>Punct de pornire:</i></b>  f-ca „Biovit” – str. Şt. cel Mare – str. Naţională – str. V. Alecsandri – str. Romană – str. Decebal – str. A. Boico – str. I. Creangă – str. Plămădeală (Direcția Situațiilor Excepționale a IGSU);<br><br><i><b>Retur:</i></b> str. Plămădeală – str. I. Creangă – str. Bernardazzi – str. B.P.Haşdeu – str. Naţională – str. Şt. cel Mare – f-ca “Biovit”– staţie terminus. <br><br><i>Puteți accesa harta interactivă a traseului acestei rute</i> <a href="https://www.plotaroute.com/route/793755?units=km">aici</a>.]]></string>
    <string name="route_2_description"><![CDATA[<i><b>Administrator</i></b> – Î.I. „Andrei Cozmilici”, lungime 13.5 km, activează de la ora 06:00 până la ora 21:00: <br><br><i><b>Punct de pornire:</i></b>  f-ca “Biovit” – str. Şt. cel Mare – str. Naţională – str. V. Alecsandri – str. Romană – str. B. P. Haşdeu – str. Bernardazzi – str. I. Creangă – str. Gh.Crestiuc – Decebal – str. Naţională – str. Şt. cel Mare – f-ca ,,Biovit” – staţie terminus. <br><br><i>Puteți accesa harta interactivă a traseului acestei rute</i> <a href="https://www.plotaroute.com/route/793761?units=km">aici</a>.]]></string>
    <string name="route_3_description"><![CDATA[<i><b>Administrator</i></b> – S.R.L. ,,RINCOR-PRIM” (Ghenadi Mitriuc), lungime 13.0 km, activează de la ora 06:00 până la ora 21:00: <br><br><i><b>Punct de pornire:</i></b>  Cheia orașului, intrare de pe traseul G90 – str. P. Rareş – intersecţie cu str. Cetireni – str. Şt. cel Mare – str. Naţională – str. V. Alecsandri – str. Romană – str. Decebal – str. Gh. Crestiuc – str. I. Creangă – str. Bernardazzi – str. B.P.Haşdeu – str. Naţională – str. Şt. cel Mare –str. P. Rareş – Cheia orașului, intrare de pe traseul G90. <br><br><i>Puteți accesa harta interactivă a traseului acestei rute</i> <a href="https://www.plotaroute.com/route/793770?units=km">aici</a>.]]></string>
    <string name="route_4_description"><![CDATA[<i><b>Administrator</i></b> – S.R.L. ,,RINCOR-PRIM” (Ghenadi Mitriuc), lungime 18.0 km, activează de la ora 06:00 până la ora 21:00: <br><br><i><b>Punct de pornire:</i></b>  Cheia oraşului (din direcţia s. Zagarancea / R16 Ungheni – Sculeni) – str. Hotinului -str. M. Viteazu – str.  Scutelniceni- str . Decebal – str. O. Ungureanu -str. I. Creangă – str. Bernardazzi – str. Decebal – str. Romană –str. V. Alecsandri – str. Naţională – str.  Şt. cel Mare – str. G. Cojbuc – str. Căpriana – str.Viilor – cotitură la stînga la colţul lotului casei nr. 19A – cotitură la stânga pe str. Deleşti – str. Căpriana – str. G. Cojbuc – str. Şt. cel Mare – str. Naţională – str. Romană – I. Creangă – str. Gh. Crestiuc – str. Decebal – str. O. Ungureanui – str. M. Viteazu -str. Hotinului – Cheia oraşului (direcţia s. Zagarancea / R16 Ungheni – Sculeni) – staţie terminus. <br><br><i>Puteți accesa harta interactivă a traseului acestei rute</i> <a href="https://www.plotaroute.com/route/793774?units=km">aici</a>.]]></string>
    <string name="route_5_description"><![CDATA[<i><b>Administrator</i></b> – S.R.L. ,,RINCOR-PRIM” (Ghenadi Mitriuc), lungime 20.0 km, activează de la ora 06:00 până la ora 21:00: <br><br><i><b>Punct de pornire:</i></b> Cheia oraşului (din direcţia s. Zagarancea / R16 Ungheni – Sculeni) – str. Decebal – str. Gh. Crestiuc – str. I. Creangă – str. Bernardazzi – str. B.P.Haşdeu – str. Naţională – str. Şt. cel Mare – str. Z.  Arbore – str. Burebista – str.  P. Rareş – str. Şt. cel Mare- str. Naţională – str. Decebal – str. Boico – str. Haşdeu – str. Bernardazzi – I. Creangă – str. Gh.  Crestiuc – str. Decebal – str. O. Ungureanu – fabrica de covoare – Cheia oraşului (din direcţia s. Zagarancea / R16 Ungheni – Sculeni), staţie terminus. <br><br>Puteți accesa harta interactivă a traseului acestei rute <a href="https://www.plotaroute.com/route/793782?units=km">aici</a>.]]></string>
    <string name="route_6_description"><![CDATA[<i><b>Administrator</i></b> – S.R.L. ,,RINCOR-PRIM” (Ghenadi Mitriuc), lungime 17.0 km, activează de la ora 06:00 până la ora 21:00: <br><br><i><b>Punct de pornire:</i></b>  Cheia oraşului (din direcţia s. Zagarancea / R16 Ungheni – Sculeni) – str. Hotinului – str. M. Viteazu – O.  Ungureanu – str. I. Creangă – str. Bernardazzi – str. Decebal – str. Romană – str. V. Alecsandri – str. Naţională – str. Şt. cel Mare – str. Lacului – str. Arcaşii lui Ştefan -cotitură la dreapta pe strada paralelă cu linia de cale ferată – str. Solidarităţii – str. Şt. cel Mare – str. Naţională – str. Decebal – str. Boico – str. Haşdeu – str. Bernardazzi – str. I. Creangă – str. Gh. Crestiuc – str. Decebal – str. Scutelniceni  – str.  M. Viteazu – str. Hotinului – Cheia oraşului (din direcţia s. Zagarancea / R16 Ungheni – Sculeni) – staţie terminus. <br><br><i>Puteți accesa harta interactivă a traseului acestei rute</i> <a href="https://www.plotaroute.com/route/793801?units=km">aici</a>.]]></string>
</resources>